# crisis-containment-openenv

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  validate-submission.sh
server/: __init__.py  app.py  crisis_containment_environment.py  requirements.txt
